arc: Add ability to invalidate app icons.

This is required when we changed icon processing on Android side and
would like to apply these changes in case previous apps icons are
already cached.

TEST=In context of ag/5700881. Blurred icons turned to normal version.
     unit tests extended.
BUG=904278

Change-Id: I68c4ab8669eb46a56e34316fc154b7554c0ff7a2
Reviewed-on: https://chromium-review.googlesource.com/c/1362463
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Yury Khmel <khmel@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#614246}(cherry picked from commit eb8839039f14016785b521e228bb0d0a8259eef7 [formerly f0e8075ebb34a7197fdbdf93a7ae3c1a59b87fd8])
Reviewed-on: https://chromium-review.googlesource.com/c/1377374
Reviewed-by: Vladislav Kaznacheev <kaznacheev@chromium.org>
Cr-Commit-Position: refs/branch-heads/3626@{#361}
Cr-Branched-From: 5302c6863bade38a5d283a7cce26a309d8e8e755 [formerly d897fb137fbaaa9355c0c93124cc048824eb1e65]-refs/heads/master@{#612437}
Former-commit-id: 98beb211bbd905656b8b1558023f43cca08a8ac4